--- a/2025-06-13/.kanji.md
+++ b/2025-06-13/.kanji.md
@@ -1,14 +1,13 @@
-
 | Kanji | Hiragana |
 |-------|----------|
 | 背景 | はいけい |
-| 浮かぶ | ふかぶ |
+| 浮かぶ | うかぶ |
 | 適用 | てきよう |
 | 設計上 | せっけいじょう |
 | 影響 | えいきょう |
 | 隔離 | かくり |
 | 制御 | せいぎょ |
-| 作業 | さくぎょう |
+| 作業 | さぎょう |
 | 与える | あたえる |
 | 組み込み | くみこみ |
 | 組み合わせ | くみあわせ |
@@ -30,7 +29,7 @@
 | 開発 | かいはつ |
 | 提供 | ていきょう |
 | 設計 | せっけい |
-| 指摘 | しちょく |
+| 指摘 | してき |
 | 特徴 | とくちょう |
 | 実現 | じつげん |
 | 維持 | いじ |
